--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="blue">
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">CloudMon</a>
+        <a href="{{ url_for('view_index')}}" class="brand-logo"><i class="material-icons left">cloud</i>CloudMon</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="{{ url_for('view_index') }}"><i class="material-icons left">apps</i>Monitors</a></li>
             <li><a href="{{ url_for('view_add_monitor') }}"><i class="material-icons left">add_circle</i>Add Monitor</a></li>
