Get modify function working

--- a/src/templates/monitor_form.html
+++ b/src/templates/monitor_form.html
@@ -44,7 +44,7 @@
         <div class="switch">
           <label>
             Disabled
-            <input type="checkbox" checked id="monitorEnabled" name="monitorEnabled" {% if monitor.enabled %}checked{% endif %}>
+            <input type="checkbox" id="monitorEnabled" name="monitorEnabled" {% if monitor.enabled %}checked{% endif %}>
             <span class="lever"></span>
             Enabled
           </label>
