--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -2,9 +2,9 @@
     <div class="nav-wrapper">
         <a href="{{ url_for('view_index')}}" class="brand-logo"><i class="material-icons left">cloud</i>CloudMon</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a class="waves-effect waves-light btn blue darken-3" id="invokeMonitor" onclick="invokeMonitor()"><i class="material-icons left">touch_app</i>Invoke Monitor</a></li>
             <li><a href="{{ url_for('view_index') }}"><i class="material-icons left">apps</i>Monitors</a></li>
             <li><a href="{{ url_for('view_add_monitor') }}"><i class="material-icons left">add_circle</i>Add Monitor</a></li>
-            <li><a href="#"><i class="material-icons left">arrow_forward</i>Logout</a></li>
         </ul>
     </div>
 </nav>
