--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-{% include 'monitor_table.html' %}
+{% include 'monitor_list.html' %}
 {% endblock %}
