--- a/src/templates/monitor_table.html
+++ b/src/templates/monitor_table.html
@@ -32,8 +32,8 @@
       <td>{{monitor.login_path}}</td>
       <td>{{monitor.monitor_path}}</td>
       <td>{{monitor.username}}</td>
-      <td>{{monitor.created.strftime('%Y-%m-%d %H:%m')}}</td>
-      <td>{{monitor.last_check.strftime('%Y-%m-%d %H:%m')}}</td>
+      <td>{{monitor.created.strftime('%Y-%m-%d %H:%M')}}</td>
+      <td>{{monitor.last_check.strftime('%Y-%m-%d %H:%M')}}</td>
       <td>
         {% if monitor.ok == True %}
         <i class="material-icons small green-text">check_circle</i>
