--- a/src/templates/monitor_table.html
+++ b/src/templates/monitor_table.html
@@ -33,7 +33,11 @@
       <td>{{monitor.monitor_path}}</td>
       <td>{{monitor.username}}</td>
       <td>{{monitor.created.strftime('%Y-%m-%d %H:%M')}}</td>
-      <td>{{monitor.last_check.strftime('%Y-%m-%d %H:%M')}}</td>
+      <td>
+        {% if monitor.last_check %}
+        {{monitor.last_check.strftime('%Y-%m-%d %H:%M')}}
+        {% endif %}
+      </td>
       <td>
         {% if monitor.ok == True %}
         <i class="material-icons small green-text">check_circle</i>
