--- a/src/templates/navbar_items.html
+++ b/src/templates/navbar_items.html
@@ -2,3 +2,4 @@
     class="material-icons left">touch_app</i>Invoke Monitor</a></li>
 <li><a href="{{ url_for('view_index') }}"><i class="material-icons left">apps</i>Monitors</a></li>
 <li><a href="{{ url_for('view_add_monitor') }}"><i class="material-icons left">add_circle</i>Add Monitor</a></li>
+<li><a href="{{ url_for('view_settings') }}"><i class="material-icons left">settings</i>Settings</a></li>
