--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="blue">
     <div class="nav-wrapper">
-        <a href="{{ url_for('view_index')}}" class="brand-logo"><i class="material-icons left">cloud</i>CloudMon</a>
+        <a href="{{ url_for('view_home')}}" class="brand-logo"><i class="material-icons left">cloud</i>CloudMon</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             {% include 'navbar_items.html' %}
