--- a/src/templates/navbar_items.html
+++ b/src/templates/navbar_items.html
@@ -1,5 +1,9 @@
+{% if session.get('user') %}
 <li><a class="waves-effect waves-light btn blue darken-3" id="invokeMonitor" onclick="invokeMonitor()"><i
     class="material-icons left">touch_app</i>Invoke Monitor</a></li>
-<li><a href="{{ url_for('view_index') }}"><i class="material-icons left">apps</i>Monitors</a></li>
+<li><a href="{{ url_for('view_home') }}"><i class="material-icons left">apps</i>Monitors</a></li>
 <li><a href="{{ url_for('view_add_monitor') }}"><i class="material-icons left">add_circle</i>Add Monitor</a></li>
 <li><a href="{{ url_for('view_settings') }}"><i class="material-icons left">settings</i>Settings</a></li>
+<li><a href="{{ url_for('view_account') }}"><i class="material-icons left">account_circle</i>Account</a></li>
+<li><a href="#" onclick="auth_logout()"><i class="material-icons left">keyboard_arrow_right</i>Logout</a></li>
+{% endif %}
