Add slack webhooks

--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -42,8 +42,8 @@
     <div class="row">
         <div class="input-field col s12">
             <i class="material-icons prefix">email</i>
-            <input disabled type="text" id="to_email" value="{{settings.to_email}}">
-            <label for="to_email">to_email</label>
+            <input disabled type="text" id="recipients" value="{{settings.recipients}}">
+            <label for="recipients">recipients</label>
         </div>
     </div>
 </form>
